    for all of the possible configuration variables.

 *) Add information to install-spnego about the two different ways of
    forming HTTP/* principals and a reference to the mod_auth_kerb patch
    that allows one to use a keytab with multiple principals.

 *) Escape Mac OS X compiler flags for apxs, fixing build issues on Mac OS
    X 10.5.

 *) Update config.guess and config.sub to the 2008-01-16 versions,
    install-sh to the Automake 1.10 version, and ltmain.sh and libtool.m4
    to the versions from the 1.5.26-1 Debian package.

 *) Remove the maxlength restriction on the username entry box in the
    example login.tmpl template.

 *) Properly nest all <list> elements inside <t> elements in the protocol
    specification and explicitly set the symrefs formatting directive.

 *) Fix a typo in the webkdcProxyTokenInfoRequest example in the protocol
    specification.

 *) Strip trailing whitespace from all libwebauth and more mod_webkdc
    source files.

WebAuth 3.5.5 (2008-01-14)

 *) Checks for browser cookies weren't working with Apache authentication
    support since the login screen was bypassed.  Simplify the logic by
    checking for browser cookies on the first page visit to WebLogin via a
    redirect and showing an error immediately if the user doesn't have
    cookies enabled.

    There is a new template variable, err_cookies_disabled, for the error
    template, indicating that the user doesn't have cookies enabled.  Old
    templates are supported but won't offer as nice of an error message.
    The err_cookies parameter to the login template is no longer used.

    Thanks to Joachim Keltsch for the patch.

 *) mod_webauthldap was allocating pool memory for the Kerberos ticket
    cache environment variable.  This memory might be freed while the
    environment variable was still in use, leading to segfaults in
    embedded code such as mod_php that walked the environment table.